@@ -2,6 +2,8 @@
 
 	* Makefile.am: Refer to source files via srcdir variable, fix
 	  out-of-tree build breakage.
+	* memory.c: Make the string field much wider
+	* memtypes.c: Correct the prefix list str/entry strings
 
 2005-04-22 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
 
